@@ -1,5 +1,5 @@
 /**
- * SPDX-FileCopyrightText: 2015-2023 Alessandro Pellegrini <a.pellegrini@ing.uniroma2.it>
+ * SPDX-FileCopyrightText: 2015-2026 Alessandro Pellegrini <a.pellegrini@ing.uniroma2.it>
  * SPDX-License-Identifier: GPL-3.0-only
  */
 package it.uniroma2.pellegrini.z64sim.view;
@@ -10,40 +10,54 @@ import com.intellij.uiDesigner.core.GridConstraints;
 import com.intellij.uiDesigner.core.GridLayoutManager;
 import com.intellij.uiDesigner.core.Spacer;
 import it.uniroma2.pellegrini.z64sim.PropertyBroker;
+import it.uniroma2.pellegrini.z64sim.controller.AppActions;
 import it.uniroma2.pellegrini.z64sim.controller.SettingsController;
 import it.uniroma2.pellegrini.z64sim.controller.SimulatorController;
 import it.uniroma2.pellegrini.z64sim.controller.UpdateController;
+import it.uniroma2.pellegrini.z64sim.model.Devices;
 import it.uniroma2.pellegrini.z64sim.model.Memory;
+import it.uniroma2.pellegrini.z64sim.model.MemoryElement;
+import it.uniroma2.pellegrini.z64sim.isa.instructions.Instruction;
 import it.uniroma2.pellegrini.z64sim.util.log.Logger;
 import it.uniroma2.pellegrini.z64sim.util.log.LoggerFactory;
-import it.uniroma2.pellegrini.z64sim.util.queue.Dispatcher;
-import it.uniroma2.pellegrini.z64sim.util.queue.Events;
 import it.uniroma2.pellegrini.z64sim.view.components.JFileDialog;
 import it.uniroma2.pellegrini.z64sim.view.components.RegisterBank;
+import it.uniroma2.pellegrini.z64sim.view.editor.AsmStyledDocument;
+import it.uniroma2.pellegrini.z64sim.view.editor.AsmSyntaxHighlighter;
+import it.uniroma2.pellegrini.z64sim.view.editor.LineNumberPanel;
 
 import javax.swing.*;
-import javax.swing.event.CaretEvent;
-import javax.swing.event.CaretListener;
+import javax.swing.event.DocumentEvent;
+import javax.swing.event.DocumentListener;
+import javax.swing.plaf.FontUIResource;
 import javax.swing.text.Element;
+import javax.swing.text.Style;
+import javax.swing.text.StyleConstants;
+import javax.swing.text.StyleContext;
+import javax.swing.undo.CannotRedoException;
+import javax.swing.undo.CannotUndoException;
+import javax.swing.undo.UndoManager;
 import java.awt.*;
 import java.awt.event.*;
 import java.io.File;
-import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Locale;
 import java.util.Objects;
 import java.util.ResourceBundle;
 
 public class MainWindow extends View {
     private static final Logger log = LoggerFactory.getLogger();
     private static MainWindow instance = null;
-    private JFrame mainFrame;
+    private final JFrame mainFrame;
     private JPanel mainPanel;
     private JButton assembleButton;
     private JTable memoryView;
     private JTextArea compilerOutput;
-    private JEditorPane editor;
+    private JTextPane editor;
     private JButton openButton;
     private JButton saveButton;
     private JPanel editorTab;
@@ -52,16 +66,66 @@ public class MainWindow extends View {
     private JButton stepButton;
     private RegisterBank cpuView;
     private JButton runButton;
+    private JButton stopButton;
     private JLabel editorPositionLabel;
+    private JSlider speedSlider;
+    private JLabel speedLabel;
+    private JTable ivtTable;
+    private JButton deviceButton;
+    private JButton muOpsButton;
 
     private File openFile = null;
     private boolean isDirty = false;
+    private boolean loading = false;
+    private AsmSyntaxHighlighter highlighter;
+    private AsmStyledDocument asmDocument;
+    private final UndoManager undoManager = new UndoManager();
+    private MuOpAnimationDialog muOpDialog;
 
     private MainWindow() {
         $$$setupUI$$$();
 
+        // Attach line number gutter to the editor's scroll pane
+        JScrollPane editorScrollPane = (JScrollPane) SwingUtilities.getAncestorOfClass(JScrollPane.class, editor);
+        if (editorScrollPane != null) {
+            LineNumberPanel lineNumbers = new LineNumberPanel(editor);
+            if (SettingsController.getShowLineNumbers()) {
+                editorScrollPane.setRowHeaderView(lineNumbers);
+            }
+            // Listen for runtime toggling of line numbers
+            SettingsController.addPropertyChangeListener("showLineNumbers", evt -> {
+                if (Boolean.TRUE.equals(evt.getNewValue())) {
+                    editorScrollPane.setRowHeaderView(lineNumbers);
+                } else {
+                    editorScrollPane.setRowHeaderView(null);
+                }
+                editorScrollPane.revalidate();
+                editorScrollPane.repaint();
+            });
+        }
+
         this.memoryView.setModel(Memory.getInstance());
         Memory.getInstance().setView(this.memoryView);
+        this.memoryView.addMouseListener(new MouseAdapter() {
+            @Override
+            public void mouseClicked(MouseEvent e) {
+                if (e.getClickCount() == 2) {
+                    int row = memoryView.rowAtPoint(e.getPoint());
+                    if (row < 0) return;
+                    long address = row * 8L;
+                    MemoryElement elem = Memory.getMemoryElementAt(address);
+                    if (elem instanceof Instruction) {
+                        InstructionInspector dialog = new InstructionInspector(
+                                mainFrame, (Instruction) elem, memoryView);
+                        dialog.setVisible(true);
+                    }
+                }
+            }
+        });
+        this.ivtTable.setModel(Devices.getInstance());
+        this.ivtTable.setFont(new Font(Font.MONOSPACED, Font.PLAIN, 12));
+        this.ivtTable.getColumnModel().getColumn(0).setPreferredWidth(40);
+        this.ivtTable.getColumnModel().getColumn(0).setMaxWidth(40);
         this.compilerOutput.setFont(new Font(Font.MONOSPACED, Font.PLAIN, 12));
 
         this.mainFrame = new JFrame(PropertyBroker.getPropertyValue("z64sim.name"));
@@ -69,7 +133,6 @@ public class MainWindow extends View {
         this.mainFrame.setDefaultCloseOperation(JFrame.DO_NOTHING_ON_CLOSE);
         this.mainFrame.setJMenuBar(new MainWindowMenu());
         this.mainFrame.setMinimumSize(new Dimension(Integer.parseInt(PropertyBroker.getPropertyValue("z64sim.ui.minSizeX")), Integer.parseInt(PropertyBroker.getPropertyValue("z64sim.ui.minSizeY"))));
-        this.mainFrame.setSize(SettingsController.getWindowSize());
         this.mainFrame.addComponentListener(new ComponentAdapter() {
             public void componentResized(ComponentEvent evt) {
                 Component c = (Component) evt.getSource();
@@ -79,93 +142,147 @@ public class MainWindow extends View {
         this.mainFrame.addWindowListener(new WindowAdapter() {
             @Override
             public void windowClosing(WindowEvent windowEvent) {
-                Dispatcher.dispatch(Events.QUIT);
+                MainWindow.quit();
             }
         });
 
         this.setApplicationIcon();
         this.mainFrame.pack();
+        // Apply saved window size after pack(), so it is not overridden
+        this.mainFrame.setSize(SettingsController.getWindowSize());
         newButton.addActionListener(actionEvent -> this.newFile());
         openButton.addActionListener(actionEvent -> this.openFile());
         saveButton.addActionListener(actionEvent -> this.saveFile());
-        assembleButton.addActionListener(actionEvent -> Dispatcher.dispatch(Events.ASSEMBLE_PROGRAM));
+        assembleButton.addActionListener(AppActions.ASSEMBLE);
 
         Toolkit tk = Toolkit.getDefaultToolkit();
-        final int modKeyMask = tk.getMenuShortcutKeyMaskEx();
+        final int modKeyMask = tk.getMenuShortcutKeyMask();
 
-        editor.addKeyListener(new KeyAdapter() {
+        // Attach undo manager to the document
+        editor.getDocument().addUndoableEditListener(undoManager);
+
+        editor.getDocument().addDocumentListener(new DocumentListener() {
             @Override
-            public void keyTyped(KeyEvent e) {
-                super.keyTyped(e);
-                if (e.getModifiersEx() != modKeyMask) {
-                    MainWindow.setDirty();
-                }
+            public void insertUpdate(DocumentEvent e) {
+                if (!loading) MainWindow.setDirty();
             }
+
+            @Override
+            public void removeUpdate(DocumentEvent e) {
+                if (!loading) MainWindow.setDirty();
+            }
+
+            @Override
+            public void changedUpdate(DocumentEvent e) { /* attribute changes, not content */ }
         });
-        editor.addCaretListener(new CaretListener() {
-            @Override
-            public void caretUpdate(CaretEvent e) {
-                // update the line number view
-                Element root = editor.getDocument().getDefaultRootElement();
-                int line = root.getElementIndex(e.getDot());
-                int col = e.getDot() - root.getElement(line).getStartOffset();
-                // both are starting to 1
-                editorPositionLabel.setText((line + 1) + ":" + (col + 1));
-            }
+        editor.addCaretListener(e -> {
+            // update the line number view
+            Element root = editor.getDocument().getDefaultRootElement();
+            int line = root.getElementIndex(e.getDot());
+            int col = e.getDot() - root.getElement(line).getStartOffset();
+            // both are starting to 1
+            editorPositionLabel.setText((line + 1) + ":" + (col + 1));
         });
         SimulatorController.setCpuView(this.cpuView);
-        stepButton.addActionListener(actionEvent -> {
-            SimulatorController.step();
+        stepButton.addActionListener(AppActions.STEP);
+        runButton.addActionListener(AppActions.RUN);
+        stopButton.addActionListener(AppActions.STOP);
+        deviceButton.addActionListener(e -> {
+            DeviceManager dialog = new DeviceManager();
+            dialog.setTitle("Device Manager");
+            dialog.pack();
+            dialog.setLocationRelativeTo(mainFrame);
+            dialog.setVisible(true);
         });
-        runButton.addActionListener(actionEvent -> {
-            SimulatorController.run();
+        muOpsButton.addActionListener(e -> {
+            if (muOpDialog == null || !muOpDialog.isDisplayable()) {
+                muOpDialog = new MuOpAnimationDialog(mainFrame);
+            }
+            muOpDialog.setVisible(true);
+            muOpDialog.toFront();
         });
 
-        mainPanel.registerKeyboardAction(
-                e -> this.saveFile(),
-                KeyStroke.getKeyStroke(KeyEvent.VK_S, modKeyMask),
-                JComponent.WHEN_IN_FOCUSED_WINDOW
-        );
+        // Keyboard shortcuts via InputMap/ActionMap
+        InputMap im = mainPanel.getInputMap(JComponent.WHEN_IN_FOCUSED_WINDOW);
+        ActionMap am = mainPanel.getActionMap();
 
-        mainPanel.registerKeyboardAction(
-                e -> this.newFile(),
-                KeyStroke.getKeyStroke(KeyEvent.VK_N, modKeyMask),
-                JComponent.WHEN_IN_FOCUSED_WINDOW
-        );
+        im.put(KeyStroke.getKeyStroke(KeyEvent.VK_S, modKeyMask), "save");
+        am.put("save", new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                MainWindow.this.saveFile();
+            }
+        });
 
-        mainPanel.registerKeyboardAction(
-                e -> this.openFile(),
-                KeyStroke.getKeyStroke(KeyEvent.VK_O, modKeyMask),
-                JComponent.WHEN_IN_FOCUSED_WINDOW
-        );
+        im.put(KeyStroke.getKeyStroke(KeyEvent.VK_N, modKeyMask), "new");
+        am.put("new", new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                MainWindow.this.newFile();
+            }
+        });
 
-        mainPanel.registerKeyboardAction(
-                e -> {
-                    SimulatorController.step();
-                },
-                KeyStroke.getKeyStroke(KeyEvent.VK_F8, 0),
-                JComponent.WHEN_IN_FOCUSED_WINDOW
-        );
+        im.put(KeyStroke.getKeyStroke(KeyEvent.VK_O, modKeyMask), "open");
+        am.put("open", new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                MainWindow.this.openFile();
+            }
+        });
 
-        mainPanel.registerKeyboardAction(
-                e -> {
-                    SimulatorController.run();
-                },
-                KeyStroke.getKeyStroke(KeyEvent.VK_F5, 0),
-                JComponent.WHEN_IN_FOCUSED_WINDOW
-        );
+        im.put((KeyStroke) AppActions.ASSEMBLE.getValue(Action.ACCELERATOR_KEY), "assemble");
+        am.put("assemble", AppActions.ASSEMBLE);
 
-        mainPanel.registerKeyboardAction(
-                e -> Dispatcher.dispatch(Events.ASSEMBLE_PROGRAM),
-                KeyStroke.getKeyStroke(KeyEvent.VK_B, modKeyMask),
-                JComponent.WHEN_IN_FOCUSED_WINDOW
-        );
+        im.put((KeyStroke) AppActions.STEP.getValue(Action.ACCELERATOR_KEY), "step");
+        am.put("step", AppActions.STEP);
+
+        im.put((KeyStroke) AppActions.RUN.getValue(Action.ACCELERATOR_KEY), "run");
+        am.put("run", AppActions.RUN);
+
+        im.put((KeyStroke) AppActions.STOP.getValue(Action.ACCELERATOR_KEY), "stop");
+        am.put("stop", AppActions.STOP);
+
+        im.put((KeyStroke) AppActions.UNDO.getValue(Action.ACCELERATOR_KEY), "undo");
+        am.put("undo", AppActions.UNDO);
+
+        im.put((KeyStroke) AppActions.REDO.getValue(Action.ACCELERATOR_KEY), "redo");
+        am.put("redo", AppActions.REDO);
+
+        // Listen for theme changes from SettingsController
+        SettingsController.addPropertyChangeListener("theme", evt -> {
+            if ("light".equals(evt.getNewValue())) {
+                this.setTheme(new FlatLightLaf());
+            } else {
+                this.setTheme(new FlatDarkLaf());
+            }
+            // Update syntax highlighting colors for the new theme
+            highlighter.setDarkTheme(!"light".equals(evt.getNewValue()));
+            asmDocument.rehighlight();
+        });
+
+        // Listen for update check completion
+        UpdateController.addPropertyChangeListener("updateCheckCompleted", evt -> {
+            if (UpdateController.isUpdateAvailable()) {
+                SwingUtilities.invokeLater(() ->
+                    JOptionPane.showMessageDialog(this.mainFrame,
+                        PropertyBroker.getMessageFromBundle("update.available.0", UpdateController.getUpstreamVersion()),
+                        PropertyBroker.getMessageFromBundle("update.available"),
+                        JOptionPane.INFORMATION_MESSAGE)
+                );
+            }
+        });
     }
 
     private void newFile() {
         if (!this.changesToDiscard())
             return;
+        this.loading = true;
+        this.asmDocument.setHighlightingEnabled(false);
         this.editor.setText("");
+        this.asmDocument.setHighlightingEnabled(true);
+        this.loading = false;
+        this.isDirty = false;
+        this.undoManager.discardAllEdits();
         this.openFile = null;
         this.tabbedPane.setTitleAt(0, PropertyBroker.getMessageFromBundle("file.tab.untitled"));
     }
@@ -183,14 +300,27 @@ public class MainWindow extends View {
             }
             this.openFile = new File(filePath);
         }
-        try {
-            Files.writeString(this.openFile.toPath(), this.editor.getText());
-            this.isDirty = false;
-            this.tabbedPane.setTitleAt(0, this.openFile.getName());
-            SettingsController.setFileLastDir(this.openFile.getParent());
-        } catch (IOException e) {
-            JOptionPane.showMessageDialog(this.mainFrame, PropertyBroker.getMessageFromBundle("file.error.while.saving.0", e.getMessage()), PropertyBroker.getMessageFromBundle("dialog.error"), JOptionPane.ERROR_MESSAGE);
-        }
+        final File fileToSave = this.openFile;
+        final String content = this.editor.getText();
+        new SwingWorker<Void, Void>() {
+            @Override
+            protected Void doInBackground() throws Exception {
+                Files.write(fileToSave.toPath(), content.getBytes(StandardCharsets.UTF_8));
+                return null;
+            }
+
+            @Override
+            protected void done() {
+                try {
+                    get(); // Check for exceptions
+                    MainWindow.this.isDirty = false;
+                    MainWindow.this.tabbedPane.setTitleAt(0, fileToSave.getName());
+                    SettingsController.setFileLastDir(fileToSave.getParent());
+                } catch (Exception e) {
+                    JOptionPane.showMessageDialog(mainFrame, PropertyBroker.getMessageFromBundle("file.error.while.saving.0", e.getMessage()), PropertyBroker.getMessageFromBundle("dialog.error"), JOptionPane.ERROR_MESSAGE);
+                }
+            }
+        }.execute();
     }
 
     private void openFile() {
@@ -205,27 +335,50 @@ public class MainWindow extends View {
         if (filePath == null) {
             return;
         }
-        try {
-            this.doOpenFile(filePath);
-            SettingsController.setFileLastDir(this.openFile.getParent());
-        } catch (IOException e) {
-            JOptionPane.showMessageDialog(this.mainFrame, PropertyBroker.getMessageFromBundle("file.error.while.opening.0", e.getMessage()), PropertyBroker.getMessageFromBundle("dialog.error"), JOptionPane.ERROR_MESSAGE);
-        }
+        this.doOpenFile(filePath);
     }
 
-    private void doOpenFile(String filePath) throws IOException {
-        this.editor.setText(Files.readString(Path.of(filePath)));
-        this.openFile = new File(filePath);
-        this.tabbedPane.setTitleAt(0, this.openFile.getName());
+    private void doOpenFile(String filePath) {
+        new SwingWorker<String, Void>() {
+            @Override
+            protected String doInBackground() throws Exception {
+                return new String(Files.readAllBytes(Paths.get(filePath)), StandardCharsets.UTF_8);
+            }
+
+            @Override
+            protected void done() {
+                try {
+                    String content = get();
+                    MainWindow.this.loading = true;
+                    MainWindow.this.asmDocument.setHighlightingEnabled(false);
+                    MainWindow.this.editor.setText(content);
+                    MainWindow.this.asmDocument.setHighlightingEnabled(true);
+                    MainWindow.this.loading = false;
+                    MainWindow.this.isDirty = false;
+                    MainWindow.this.undoManager.discardAllEdits();
+                    MainWindow.this.openFile = new File(filePath);
+                    MainWindow.this.tabbedPane.setTitleAt(0, MainWindow.this.openFile.getName());
+                    SettingsController.setFileLastDir(MainWindow.this.openFile.getParent());
+                } catch (Exception e) {
+                    JOptionPane.showMessageDialog(mainFrame, PropertyBroker.getMessageFromBundle("file.error.while.opening.0", e.getMessage()), PropertyBroker.getMessageFromBundle("dialog.error"), JOptionPane.ERROR_MESSAGE);
+                }
+            }
+        }.execute();
     }
 
     // Return false if the user canceled the action
     private boolean changesToDiscard() {
         if (this.isDirty) {
-            int result = JOptionPane.showConfirmDialog(this.mainFrame, PropertyBroker.getMessageFromBundle("file.modified.want.to.save"), PropertyBroker.getMessageFromBundle("file.save.question"), JOptionPane.YES_NO_CANCEL_OPTION);
+            int result = JOptionPane.showConfirmDialog(this.mainFrame,
+                    PropertyBroker.getMessageFromBundle("file.modified.want.to.save"),
+                    PropertyBroker.getMessageFromBundle("file.save.question"),
+                    JOptionPane.YES_NO_CANCEL_OPTION);
             if (result == JOptionPane.YES_OPTION) {
                 this.saveFile();
-            } else return result != JOptionPane.CANCEL_OPTION;
+                return true;
+            }
+            // NO means discard changes and proceed; anything else (CANCEL, CLOSED_OPTION) aborts
+            return result == JOptionPane.NO_OPTION;
         }
         return true;
     }
@@ -247,17 +400,33 @@ public class MainWindow extends View {
     public static void showMainWindow(String fileToOpen) {
         MainWindow instance = getInstance();
         if (fileToOpen != null) {
-            try {
-                instance.doOpenFile(fileToOpen);
-            } catch (IOException e) {
-                log.error(PropertyBroker.getMessageFromBundle("file.error.while.opening"), e);
-            }
+            instance.doOpenFile(fileToOpen);
         }
         instance.show();
     }
 
     public static String getCode() {
         return getInstance().editor.getText();
+    }
+
+    public static void undo() {
+        UndoManager um = getInstance().undoManager;
+        if (um.canUndo()) {
+            try {
+                um.undo();
+            } catch (CannotUndoException ignored) {
+            }
+        }
+    }
+
+    public static void redo() {
+        UndoManager um = getInstance().undoManager;
+        if (um.canRedo()) {
+            try {
+                um.redo();
+            } catch (CannotRedoException ignored) {
+            }
+        }
     }
 
     public static void compileResult(String toString) {
@@ -275,32 +444,46 @@ public class MainWindow extends View {
         // Set the minimized icon for the jar (works out of the box on Windows and Linux)
         this.mainFrame.setIconImage(image);
 
-        // Now the macOS shit to set the icon in the docker. This is the only place that requires us to
-        // run on Java >8, otherwise it'd be ugly and nasty to check if com.apple.eawt.Application is accessible.
+        // Set the icon in the macOS dock. We use reflection to avoid a compile-time dependency on
+        // java.awt.Taskbar (introduced in Java 9), so the project can target Java 8.
         try {
-            final Taskbar taskbar = Taskbar.getTaskbar();
-            taskbar.setIconImage(image);
-        } catch (final UnsupportedOperationException ignored) {
-        } catch (final SecurityException e) {
-            log.error(PropertyBroker.getMessageFromBundle("exception.security.while.setting.icon"));
+            final Class<?> taskbarClass = Class.forName("java.awt.Taskbar");
+            final Method getTaskbar = taskbarClass.getMethod("getTaskbar");
+            final Object taskbar = getTaskbar.invoke(null);
+            final Method setIconImage = taskbarClass.getMethod("setIconImage", Image.class);
+            setIconImage.invoke(taskbar, image);
+        } catch (final ClassNotFoundException ignored) {
+            // java.awt.Taskbar is not available (Java 8) -- try the legacy Apple API
+            try {
+                final Class<?> appClass = Class.forName("com.apple.eawt.Application");
+                final Method getApp = appClass.getMethod("getApplication");
+                final Object app = getApp.invoke(null);
+                final Method setDockIcon = appClass.getMethod("setDockIconImage", Image.class);
+                setDockIcon.invoke(app, image);
+            } catch (final ReflectiveOperationException alsoIgnored) {
+                // Not on macOS, or the Apple API is not available -- nothing to do
+            }
+        } catch (final InvocationTargetException e) {
+            if (e.getCause() instanceof UnsupportedOperationException) {
+                // Taskbar feature not supported on this platform -- nothing to do
+            } else if (e.getCause() instanceof SecurityException) {
+                log.error(PropertyBroker.getMessageFromBundle("exception.security.while.setting.icon"));
+            }
+        } catch (final ReflectiveOperationException ignored) {
+            // NoSuchMethodException, IllegalAccessException -- should not happen, but fail silently
         }
     }
 
-    @Override
-    public boolean dispatch(Events command) {
-        switch (command) {
-            case SET_THEME_LIGHT:
-                this.setTheme(new FlatLightLaf());
-                break;
-            case SET_THEME_DARK:
-                this.setTheme(new FlatDarkLaf());
-                break;
-            case UPDATE_CHECK_COMPLETED:
-                if (UpdateController.isUpdateAvailable()) {
-                    JOptionPane.showMessageDialog(this.mainFrame, PropertyBroker.getMessageFromBundle("update.available.0", UpdateController.getUpstreamVersion()), PropertyBroker.getMessageFromBundle("update.available"), JOptionPane.INFORMATION_MESSAGE);
-                }
+    /**
+     * Quit the application, prompting to save unsaved changes.
+     */
+    public static void quit() {
+        MainWindow mw = getInstance();
+        if (!mw.changesToDiscard()) {
+            return;
         }
-        return true;
+        SettingsController.persist();
+        System.exit(0);
     }
 
     private void setTheme(LookAndFeel theme) {
@@ -321,6 +504,7 @@ public class MainWindow extends View {
      * @noinspection ALL
      */
     private void $$$setupUI$$$() {
+        createUIComponents();
         mainPanel = new JPanel();
         mainPanel.setLayout(new GridLayoutManager(2, 1, new Insets(0, 0, 0, 0), -1, -1));
         Font mainPanelFont = UIManager.getFont("Panel.font");
@@ -371,6 +555,35 @@ public class MainWindow extends View {
         runButton.setText("");
         runButton.setToolTipText(this.$$$getMessageFromBundle$$$("i18n", "gui.run.program"));
         toolBar1.add(runButton);
+        stopButton = new JButton();
+        Font stopButtonFont = UIManager.getFont("Button.font");
+        if (stopButtonFont != null) stopButton.setFont(stopButtonFont);
+        stopButton.setIcon(new ImageIcon(getClass().getResource("/images/stop.png")));
+        stopButton.setText("");
+        stopButton.setToolTipText(this.$$$getMessageFromBundle$$$("i18n", "gui.stop.program"));
+        toolBar1.add(stopButton);
+        deviceButton = new JButton();
+        Font deviceButtonFont = UIManager.getFont("Button.font");
+        if (deviceButtonFont != null) deviceButton.setFont(deviceButtonFont);
+        deviceButton.setIcon(new ImageIcon(getClass().getResource("/images/iodevice.png")));
+        deviceButton.setText("");
+        deviceButton.setToolTipText(this.$$$getMessageFromBundle$$$("i18n", "button.devices"));
+        toolBar1.add(deviceButton);
+        muOpsButton = new JButton();
+        Font muOpsButtonFont = UIManager.getFont("Button.font");
+        if (muOpsButtonFont != null) muOpsButton.setFont(muOpsButtonFont);
+        muOpsButton.setIcon(new ImageIcon(getClass().getResource("/images/mu.png")));
+        muOpsButton.setText("");
+        muOpsButton.setToolTipText(this.$$$getMessageFromBundle$$$("i18n", "inspect.muops"));
+        toolBar1.add(muOpsButton);
+        final JToolBar.Separator toolBar$Separator1 = new JToolBar.Separator();
+        toolBar1.add(toolBar$Separator1);
+        speedLabel = new JLabel();
+        this.$$$loadLabelText$$$(speedLabel, this.$$$getMessageFromBundle$$$("i18n", "gui.simulation.speed"));
+        toolBar1.add(speedLabel);
+        toolBar1.add(speedSlider);
+        final Spacer spacer1 = new Spacer();
+        toolBar1.add(spacer1);
         final JSplitPane splitPane1 = new JSplitPane();
         splitPane1.setDividerSize(5);
         Font splitPane1Font = UIManager.getFont("Panel.font");
@@ -397,7 +610,6 @@ public class MainWindow extends View {
         Font scrollPane1Font = UIManager.getFont("Panel.font");
         if (scrollPane1Font != null) scrollPane1.setFont(scrollPane1Font);
         editorTab.add(scrollPane1, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_WANT_GROW, null, null, null, 0, false));
-        editor = new JEditorPane();
         Font editorFont = UIManager.getFont("EditorPane.font");
         if (editorFont != null) editor.setFont(editorFont);
         scrollPane1.setViewportView(editor);
@@ -406,9 +618,9 @@ public class MainWindow extends View {
         editorTab.add(panel1, new GridConstraints(1, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_BOTH, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, GridConstraints.SIZEPOLICY_CAN_SHRINK | GridConstraints.SIZEPOLICY_CAN_GROW, null, null, null, 0, false));
         editorPositionLabel = new JLabel();
         editorPositionLabel.setText(" ");
-        panel1.add(editorPositionLabel, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_WEST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_FIXED, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
-        final Spacer spacer1 = new Spacer();
-        panel1.add(spacer1, new GridConstraints(0, 1, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_HORIZONTAL, GridConstraints.SIZEPOLICY_WANT_GROW, 1, null, null, null, 0, false));
+        panel1.add(editorPositionLabel, new GridConstraints(0, 1, 1, 1, GridConstraints.ANCHOR_WEST, GridConstraints.FILL_NONE, GridConstraints.SIZEPOLICY_FIXED, GridConstraints.SIZEPOLICY_FIXED, null, null, null, 0, false));
+        final Spacer spacer2 = new Spacer();
+        panel1.add(spacer2, new GridConstraints(0, 0, 1, 1, GridConstraints.ANCHOR_CENTER, GridConstraints.FILL_HORIZONTAL, GridConstraints.SIZEPOLICY_WANT_GROW, 1, null, null, null, 0, false));
         final JScrollPane scrollPane2 = new JScrollPane();
         splitPane2.setRightComponent(scrollPane2);
         memoryView = new JTable();
@@ -417,8 +629,6 @@ public class MainWindow extends View {
         final JSplitPane splitPane3 = new JSplitPane();
         splitPane3.setOrientation(0);
         splitPane1.setRightComponent(splitPane3);
-        cpuView = new RegisterBank();
-        splitPane3.setLeftComponent(cpuView.$$$getRootComponent$$$());
         final JScrollPane scrollPane3 = new JScrollPane();
         Font scrollPane3Font = UIManager.getFont("Panel.font");
         if (scrollPane3Font != null) scrollPane3.setFont(scrollPane3Font);
@@ -428,10 +638,48 @@ public class MainWindow extends View {
         compilerOutput.setRows(5);
         compilerOutput.setText("");
         scrollPane3.setViewportView(compilerOutput);
+        final JSplitPane splitPane4 = new JSplitPane();
+        splitPane4.setResizeWeight(1.0);
+        splitPane3.setLeftComponent(splitPane4);
+        cpuView = new RegisterBank();
+        splitPane4.setLeftComponent(cpuView.$$$getRootComponent$$$());
+        final JScrollPane scrollPane4 = new JScrollPane();
+        scrollPane4.setPreferredSize(new Dimension(200, 0));
+        splitPane4.setRightComponent(scrollPane4);
+        ivtTable = new JTable();
+        ivtTable.setFillsViewportHeight(true);
+        Font ivtTableFont = this.$$$getFont$$$("Monospaced", -1, 12, ivtTable.getFont());
+        if (ivtTableFont != null) ivtTable.setFont(ivtTableFont);
+        scrollPane4.setViewportView(ivtTable);
+    }
+
+    /**
+     * @noinspection ALL
+     */
+    private Font $$$getFont$$$(String fontName, int style, int size, Font currentFont) {
+        if (currentFont == null) return null;
+        String resultName;
+        if (fontName == null) {
+            resultName = currentFont.getName();
+        } else {
+            Font testFont = new Font(fontName, Font.PLAIN, 10);
+            if (testFont.canDisplay('a') && testFont.canDisplay('1')) {
+                resultName = fontName;
+            } else {
+                resultName = currentFont.getName();
+            }
+        }
+        Font font = new Font(resultName, style >= 0 ? style : currentFont.getStyle(), size >= 0 ? size : currentFont.getSize());
+        boolean isMac = System.getProperty("os.name", "").toLowerCase(Locale.ENGLISH).startsWith("mac");
+        Font fontWithFallback = isMac ? new Font(font.getFamily(), font.getStyle(), font.getSize()) : new StyleContext().getFont(font.getFamily(), font.getStyle(), font.getSize());
+        return fontWithFallback instanceof FontUIResource ? fontWithFallback : new FontUIResource(fontWithFallback);
     }
 
     private static Method $$$cachedGetBundleMethod$$$ = null;
 
+    /**
+     * @noinspection ALL
+     */
     private String $$$getMessageFromBundle$$$(String path, String key) {
         ResourceBundle bundle;
         try {
@@ -450,8 +698,63 @@ public class MainWindow extends View {
     /**
      * @noinspection ALL
      */
+    private void $$$loadLabelText$$$(JLabel component, String text) {
+        StringBuffer result = new StringBuffer();
+        boolean haveMnemonic = false;
+        char mnemonic = '\0';
+        int mnemonicIndex = -1;
+        for (int i = 0; i < text.length(); i++) {
+            if (text.charAt(i) == '&') {
+                i++;
+                if (i == text.length()) break;
+                if (!haveMnemonic && text.charAt(i) != '&') {
+                    haveMnemonic = true;
+                    mnemonic = text.charAt(i);
+                    mnemonicIndex = result.length();
+                }
+            }
+            result.append(text.charAt(i));
+        }
+        component.setText(result.toString());
+        if (haveMnemonic) {
+            component.setDisplayedMnemonic(mnemonic);
+            component.setDisplayedMnemonicIndex(mnemonicIndex);
+        }
+    }
+
+    /**
+     * @noinspection ALL
+     */
     public JComponent $$$getRootComponent$$$() {
         return mainPanel;
     }
 
+
+    private void createUIComponents() {
+        speedSlider = new JSlider(0, 1000, 1000);
+        speedSlider.setPreferredSize(new Dimension(120, speedSlider.getPreferredSize().height));
+        speedSlider.setMaximumSize(new Dimension(120, speedSlider.getPreferredSize().height));
+        speedSlider.setToolTipText(PropertyBroker.getMessageFromBundle("gui.speed.slider"));
+        speedSlider.addChangeListener(e -> SimulatorController.setTimerDelay(1000 - speedSlider.getValue()));
+
+        // Create the syntax-highlighted editor
+        highlighter = new AsmSyntaxHighlighter();
+        // Detect initial theme
+        highlighter.setDarkTheme(!"light".equals(SettingsController.getTheme()));
+        asmDocument = new AsmStyledDocument(highlighter);
+        editor = new JTextPane(asmDocument) {
+            @Override
+            public boolean getScrollableTracksViewportWidth() {
+                // Prevent word-wrap: allow horizontal scrolling like a code editor
+                return getUI().getPreferredSize(this).width <= getParent().getSize().width;
+            }
+        };
+        Font monoFont = new Font(Font.MONOSPACED, Font.PLAIN, 14);
+        editor.setFont(monoFont);
+        // JTextPane renders using the document's styles, not the component font.
+        // Set the monospaced font on the document's default style so all text uses it.
+        Style defaultStyle = asmDocument.getStyle(StyleContext.DEFAULT_STYLE);
+        StyleConstants.setFontFamily(defaultStyle, Font.MONOSPACED);
+        StyleConstants.setFontSize(defaultStyle, 14);
+    }
 }
